[gd_scene load_steps=7 format=3 uid="uid://dk3xsc06vi8bt"]

[ext_resource type="Script" path="res://scenes/elements/Projectile/XR/XRArrowHand.gd" id="1_kvefu"]
[ext_resource type="AudioStream" uid="uid://lv4nfllhe1tt" path="res://scenes/elements/Turrets/Bow/sounds/bow_shot.ogg" id="2_1r71t"]
[ext_resource type="AudioStream" uid="uid://cp0p4ps1lc11e" path="res://scenes/elements/Turrets/Bow/sounds/slow_draw.ogg" id="3_qnr66"]
[ext_resource type="AudioStream" uid="uid://bqjkwpb6bh0wh" path="res://scenes/elements/Turrets/Bow/sounds/fast_draw.ogg" id="4_2af7i"]

[sub_resource type="SphereShape3D" id="SphereShape3D_bejeb"]
radius = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_476t2"]
height = 0.5
radius = 0.05

[node name="XRArrowHand" type="Area3D"]
collision_layer = 0
collision_mask = 25165824
monitorable = false
script = ExtResource("1_kvefu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_bejeb")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.25)
shape = SubResource("CylinderShape3D_476t2")

[node name="ShotSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_1r71t")

[node name="FastDrawSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_2af7i")
volume_db = 5.0

[node name="SlowDrawSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_qnr66")
volume_db = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
